[gd_scene load_steps=3 format=3 uid="uid://duniqv3b8fph5"]

[ext_resource type="Script" path="res://Game.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dmfq6ywgajjru" path="res://Keyboard/Keyboard.tscn" id="3"]

[node name="Game" type="Node"]
script = ExtResource("2")

[node name="Words" type="CanvasLayer" parent="."]

[node name="WordRows" type="VBoxContainer" parent="Words"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 20.024
offset_right = 125.0
offset_bottom = 370.0

[node name="WordRow1" type="HBoxContainer" parent="Words/WordRows"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Letter1" type="ColorRect" parent="Words/WordRows/WordRow1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow1/Letter1"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter2" type="ColorRect" parent="Words/WordRows/WordRow1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow1/Letter2"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter3" type="ColorRect" parent="Words/WordRows/WordRow1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow1/Letter3"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter4" type="ColorRect" parent="Words/WordRows/WordRow1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow1/Letter4"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter5" type="ColorRect" parent="Words/WordRows/WordRow1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow1/Letter5"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="WordRow2" type="HBoxContainer" parent="Words/WordRows"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Letter1" type="ColorRect" parent="Words/WordRows/WordRow2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow2/Letter1"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter2" type="ColorRect" parent="Words/WordRows/WordRow2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow2/Letter2"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter3" type="ColorRect" parent="Words/WordRows/WordRow2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow2/Letter3"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter4" type="ColorRect" parent="Words/WordRows/WordRow2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow2/Letter4"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter5" type="ColorRect" parent="Words/WordRows/WordRow2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow2/Letter5"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="WordRow3" type="HBoxContainer" parent="Words/WordRows"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Letter1" type="ColorRect" parent="Words/WordRows/WordRow3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow3/Letter1"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter2" type="ColorRect" parent="Words/WordRows/WordRow3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow3/Letter2"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter3" type="ColorRect" parent="Words/WordRows/WordRow3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow3/Letter3"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter4" type="ColorRect" parent="Words/WordRows/WordRow3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow3/Letter4"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter5" type="ColorRect" parent="Words/WordRows/WordRow3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow3/Letter5"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="WordRow4" type="HBoxContainer" parent="Words/WordRows"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Letter1" type="ColorRect" parent="Words/WordRows/WordRow4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow4/Letter1"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter2" type="ColorRect" parent="Words/WordRows/WordRow4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow4/Letter2"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter3" type="ColorRect" parent="Words/WordRows/WordRow4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow4/Letter3"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter4" type="ColorRect" parent="Words/WordRows/WordRow4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow4/Letter4"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter5" type="ColorRect" parent="Words/WordRows/WordRow4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow4/Letter5"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="WordRow5" type="HBoxContainer" parent="Words/WordRows"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Letter1" type="ColorRect" parent="Words/WordRows/WordRow5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow5/Letter1"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter2" type="ColorRect" parent="Words/WordRows/WordRow5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow5/Letter2"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter3" type="ColorRect" parent="Words/WordRows/WordRow5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow5/Letter3"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter4" type="ColorRect" parent="Words/WordRows/WordRow5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow5/Letter4"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter5" type="ColorRect" parent="Words/WordRows/WordRow5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow5/Letter5"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="WordRow6" type="HBoxContainer" parent="Words/WordRows"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Letter1" type="ColorRect" parent="Words/WordRows/WordRow6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow6/Letter1"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter2" type="ColorRect" parent="Words/WordRows/WordRow6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow6/Letter2"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter3" type="ColorRect" parent="Words/WordRows/WordRow6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow6/Letter3"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter4" type="ColorRect" parent="Words/WordRows/WordRow6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow6/Letter4"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Letter5" type="ColorRect" parent="Words/WordRows/WordRow6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="Letter" type="Label" parent="Words/WordRows/WordRow6/Letter5"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2

[node name="Message" type="Label" parent="Words"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -240.0
offset_top = -25.0
offset_right = 240.0
offset_bottom = 25.0
text = "Godot Wordle"

[node name="Keyboard" parent="." instance=ExtResource("3")]
unique_name_in_owner = true
